Fixed footer covering some elements in XS mode. Fixed broken links on trivia index.

--- a/TwolipsDating/Content/Site.css
+++ b/TwolipsDating/Content/Site.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    margin-bottom: 120px;
+    margin-bottom: 200px;
     background-color: #E9EAED;
 }
 
